--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,36 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.4.RELEASE")
+    }
+}
+
 plugins {
     id 'java'
     id 'application'
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'com.google.guava:guava:27.0.1-jre'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'jacebook.api.App'
+        )
+    }
+}
+
+test {
+    useJUnitPlatform()
 }
 
 mainClassName = 'jacebook.api.App'
