--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ plugins {
     id 'application'
 }
 
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
 repositories {
     mavenCentral()
 }
@@ -21,12 +25,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'jacebook.api.App'
-        )
-    }
+bootJar {
+    version =  '0.1.0'
 }
 
 test {
