--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/jacebook_dev
 spring.datasource.username= gps2601
 spring.datasource.password= test123
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+ The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
+ Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
