--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     compile group: 'com.h2database', name: 'h2'
     compile("org.springframework.boot:spring-boot-starter-data-rest")
+    compile('org.flywaydb:flyway-core')
 }
 
 bootJar {
